<resources>
    <string name="app_name">TicTacToe</string>
    <string name="content_description_statistics">Statistics</string>
    <string name="content_description_settings">Settings</string>
    <string name="tv_replay">Replay</string>
    <string name="content_description_exit">Open main screen</string>
    <string name="content_description_replay">Replay</string>
    <string name="tv_win_info">Winner is %s</string>
    <string name="tv_info">Game end with a tie</string>
    <string name="toolbar_title_settings">Settings</string>
    <string name="toolbar_title_statistics">Statistics</string>
    <string name="tv_title_pvp">Player vs Player</string>
    <string name="tv_player_x">Player X</string>
    <string name="tv_player_0">Player 0</string>
    <string name="tv_player">Player</string>
    <string name="tv_ai">Ai</string>
    <string name="tv_title_pva_lazy">Player vs Ai (lazy)</string>
    <string name="tv_title_pva_hard">Player vs Ai (hard)</string>
    <string name="dialog_reset_title">Reset statistics</string>
    <string name="dialog_reset_msg">Do you want to clear statistics?</string>
    <string name="dialog_positive_btn">Yes</string>
    <string name="dialog_negative_btn">No</string>


    <string-array name="list_game_mode">
        <item>Player vs Player</item>
        <item>Player vs Ai (lazy)</item>
        <item>Player vs Ai (hard)</item>
    </string-array>

    <string-array name="list_first_step">
        <item>Player</item>
        <item>Ai</item>
    </string-array>
</resources>
