<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/backgroundLight">

    <TextView
        android:id="@+id/btn_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:textColor="@android:color/black"
        android:drawableTop="@drawable/ic_play"
        android:drawablePadding="16dp"/>


    <LinearLayout
        android:id="@+id/layout_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignBottom="@id/btn_play">

        <ImageView
            android:id="@+id/btn_statistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_statistics"
            android:contentDescription="@string/content_description_statistics"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/btn_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_settings"
            android:contentDescription="@string/content_description_settings"/>
    </LinearLayout>

</RelativeLayout>