<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLight">

    <LinearLayout
        android:id="@+id/layout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal|top"
        android:padding="16dp"
        android:visibility="gone">
        <ImageButton
            android:id="@+id/btn_return"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_return"
            android:contentDescription="@string/content_description_exit"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <ImageButton
            android:id="@+id/btn_replay"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_replay"
            android:contentDescription="@string/content_description_replay"/>
    </LinearLayout>

    <com.foxy.tictactoe.ui.FieldView
        android:id="@+id/field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="48dp"/>

    <TextView
        android:id="@+id/tv_win_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="48dp"
        android:text="@string/tv_win_info"
        android:textSize="28sp"
        android:textColor="@color/textColorDark"
        android:visibility="gone"/>

</FrameLayout>